--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.1.0",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
     "react": "19.1.0",
